--- a/src/components/snake/snake.html
+++ b/src/components/snake/snake.html
@@ -1,4 +1,7 @@
-<div id="snakeContainer">
+<div id="titleDiv" class="center">
+	<h1 id="title">SNAKE #OLDSKOOL</h1>
+</div>
+<div id="snakeContainer" class="center">
 	<h3>Score: {{score}}</h3>
 	<div>
 		<div class="row" ng-repeat="column in board">
@@ -6,5 +9,5 @@
 			</div>
 		</div>
 	</div>
-	<div id="startSnake" ng-click="startSnake()">Start Game!</div>
+	<div class="center" id="startSnake" ng-click="startSnake()">Start Game!</div>
 </div>
